[gd_scene load_steps=10 format=2]

[ext_resource path="res://StateMachine/StateMachine.gd" type="Script" id=1]
[ext_resource path="res://Player/source/Combat/States/Block.gd" type="Script" id=2]
[ext_resource path="res://Combat/Hitbox.tscn" type="PackedScene" id=3]
[ext_resource path="res://Combat/Hurtbox.tscn" type="PackedScene" id=4]
[ext_resource path="res://Player/source/Combat/States/NormalAttack.gd" type="Script" id=5]
[ext_resource path="res://Player/source/Combat/States/Idle.gd" type="Script" id=6]
[ext_resource path="res://Player/source/Combat/PlayerCombat.gd" type="Script" id=7]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 6.5, 14 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 24.5, 14 )

[node name="PlayerCombat" type="Node2D"]
script = ExtResource( 7 )

[node name="Hitbox" parent="." instance=ExtResource( 3 )]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
modulate = Color( 1, 0, 0, 1 )
position = Vector2( -0.5, -16 )
shape = SubResource( 2 )

[node name="Hurtbox" parent="." instance=ExtResource( 4 )]
visible = false
collision_layer = 16
collision_mask = 32
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
modulate = Color( 1, 0.572549, 0, 1 )
position = Vector2( 4.5, -20 )
shape = SubResource( 3 )

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 1 )
initial_state = NodePath("Idle")

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource( 6 )

[node name="NormalAttack" type="Node" parent="StateMachine"]
script = ExtResource( 5 )
start_frame = 3

[node name="Block" type="Node" parent="StateMachine"]
script = ExtResource( 2 )

[node name="InvincibilityTimer" type="Timer" parent="."]
one_shot = true

[connection signal="died" from="Hitbox" to="." method="_on_Hitbox_died"]
[connection signal="got_hit" from="Hitbox" to="." method="_on_Hitbox_got_hit"]
